Dynamic-access coverage for kotlin.coroutines.jvm.internal.ModuleNameRetriever (17/18)